# 7guis-vala

./: README.md  main.vala  meson.build  techstack.md  techstack.yml
1-counter/: Application.vala  main.vala  meson.build
2-temperature-converter/: Application.vala  ViewModel.vala  meson.build
3-flight-booker/: Application.vala  Constraint.vala  FlightType.vala  FlightTypeInfo.vala  ViewModel.vala  meson.build
3-flight-booker/data/: app.css  gresource.xml
4-timer/: Application.vala  meson.build
docs/: 7guis-vala.md
